cmake_minimum_required(VERSION 2.8)

SET(PARENT_PROJECT interviewbit)
project (${PARENT_PROJECT})

include(helper)

SUBDIRLIST(PROJECTS_SUBDIRS "${PROJECT_SOURCE_DIR}")
FOREACH(subdir ${PROJECTS_SUBDIRS})
  ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/${subdir} "${CMAKE_CURRENT_BINARY_DIR}/${subdir}")
ENDFOREACH()
