cmake_minimum_required(VERSION 2.8)

SET(PARENT_PROJECT leetcode)
project (${PARENT_PROJECT})

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/subsets "${CMAKE_CURRENT_BINARY_DIR}/subsets")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/count-primes "${CMAKE_CURRENT_BINARY_DIR}/count-primes")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/ugly-number "${CMAKE_CURRENT_BINARY_DIR}/ugly-number")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/prime-number-of-set-bits-in-binary-representation "${CMAKE_CURRENT_BINARY_DIR}/prime-number-of-set-bits-in-binary-representation")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/minimum-cost-to-hire-k-workers "${CMAKE_CURRENT_BINARY_DIR}/minimum-cost-to-hire-k-workers")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/two-sum "${CMAKE_CURRENT_BINARY_DIR}/two-sum")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/3sum "${CMAKE_CURRENT_BINARY_DIR}/3sum")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/add-two-numbers "${CMAKE_CURRENT_BINARY_DIR}/add-two-numbers")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/two-sum-ii-input-array-is-sorted "${CMAKE_CURRENT_BINARY_DIR}/two-sum-ii-input-array-is-sorted")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/two-sum-iv-input-is-a-bst "${CMAKE_CURRENT_BINARY_DIR}/two-sum-iv-input-is-a-bst")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/subarray-sum-equals-k "${CMAKE_CURRENT_BINARY_DIR}/subarray-sum-equals-k")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/continuous-subarray-sum "${CMAKE_CURRENT_BINARY_DIR}/continuous-subarray-sum")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/median-of-two-sorted-arrays "${CMAKE_CURRENT_BINARY_DIR}/median-of-two-sorted-arrays")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/longest-increasing-subsequence "${CMAKE_CURRENT_BINARY_DIR}/longest-increasing-subsequence")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/number-of-longest-increasing-subsequence "${CMAKE_CURRENT_BINARY_DIR}/number-of-longest-increasing-subsequence")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/longest-continuous-increasing-subsequence "${CMAKE_CURRENT_BINARY_DIR}/longest-continuous-increasing-subsequence")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/intersection-of-two-linked-lists "${CMAKE_CURRENT_BINARY_DIR}/intersection-of-two-linked-lists")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/reverse-string "${CMAKE_CURRENT_BINARY_DIR}/reverse-string")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/find-the-duplicate-number "${CMAKE_CURRENT_BINARY_DIR}/find-the-duplicate-number")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/first-missing-positive "${CMAKE_CURRENT_BINARY_DIR}/first-missing-positive")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/find-all-numbers-disappeared-in-an-array "${CMAKE_CURRENT_BINARY_DIR}/find-all-numbers-disappeared-in-an-array")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/find-all-duplicates-in-an-array "${CMAKE_CURRENT_BINARY_DIR}/find-all-duplicates-in-an-array")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/buddy-strings "${CMAKE_CURRENT_BINARY_DIR}/buddy-strings")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/reverse-bits "${CMAKE_CURRENT_BINARY_DIR}/reverse-bits")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/string-to-integer-atoi "${CMAKE_CURRENT_BINARY_DIR}/string-to-integer-atoi")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/rotate-image "${CMAKE_CURRENT_BINARY_DIR}/rotate-image")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/rotate-array "${CMAKE_CURRENT_BINARY_DIR}/rotate-array")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/image-smoother "${CMAKE_CURRENT_BINARY_DIR}/image-smoother")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/image-overlap "${CMAKE_CURRENT_BINARY_DIR}/image-overlap")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/transpose-matrix "${CMAKE_CURRENT_BINARY_DIR}/transpose-matrix")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/rectangle-overlap "${CMAKE_CURRENT_BINARY_DIR}/rectangle-overlap")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/rectangle-area "${CMAKE_CURRENT_BINARY_DIR}/rectangle-area")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/excel-sheet-column-number "${CMAKE_CURRENT_BINARY_DIR}/excel-sheet-column-number")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/excel-sheet-column-title "${CMAKE_CURRENT_BINARY_DIR}/excel-sheet-column-title")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/maximum-product-of-three-numbers "${CMAKE_CURRENT_BINARY_DIR}/maximum-product-of-three-numbers")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/maximum-product-subarray "${CMAKE_CURRENT_BINARY_DIR}/maximum-product-subarray")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/maximum-subarray "${CMAKE_CURRENT_BINARY_DIR}/maximum-subarray")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/roman-to-integer "${CMAKE_CURRENT_BINARY_DIR}/roman-to-integer")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/reverse-string-ii "${CMAKE_CURRENT_BINARY_DIR}/reverse-string-ii")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/minimum-size-subarray-sum "${CMAKE_CURRENT_BINARY_DIR}/minimum-size-subarray-sum")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/find-the-difference "${CMAKE_CURRENT_BINARY_DIR}/find-the-difference")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/remove-duplicates-from-sorted-array-ii "${CMAKE_CURRENT_BINARY_DIR}/remove-duplicates-from-sorted-array-ii")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/remove-duplicates-from-sorted-array "${CMAKE_CURRENT_BINARY_DIR}/remove-duplicates-from-sorted-array")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/remove-element "${CMAKE_CURRENT_BINARY_DIR}/remove-element")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/remove-linked-list-elements "${CMAKE_CURRENT_BINARY_DIR}/remove-linked-list-elements")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/delete-node-in-a-linked-list "${CMAKE_CURRENT_BINARY_DIR}/delete-node-in-a-linked-list")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/move-zeroes "${CMAKE_CURRENT_BINARY_DIR}/move-zeroes")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/toeplitz-matrix "${CMAKE_CURRENT_BINARY_DIR}/toeplitz-matrix")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1-bit-and-2-bit-characters "${CMAKE_CURRENT_BINARY_DIR}/1-bit-and-2-bit-characters")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/gray-code "${CMAKE_CURRENT_BINARY_DIR}/gray-code")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/range-sum-query-immutable "${CMAKE_CURRENT_BINARY_DIR}/range-sum-query-immutable")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/range-sum-query-2d-immutable "${CMAKE_CURRENT_BINARY_DIR}/range-sum-query-2d-immutable")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/shortest-bridge "${CMAKE_CURRENT_BINARY_DIR}/shortest-bridge")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/number-of-islands "${CMAKE_CURRENT_BINARY_DIR}/number-of-islands")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/max-area-of-island "${CMAKE_CURRENT_BINARY_DIR}/max-area-of-island")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/island-perimeter "${CMAKE_CURRENT_BINARY_DIR}/island-perimeter")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/flood-fill "${CMAKE_CURRENT_BINARY_DIR}/flood-fill")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/surrounded-regions "${CMAKE_CURRENT_BINARY_DIR}/surrounded-regions")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/game-of-life "${CMAKE_CURRENT_BINARY_DIR}/game-of-life")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/set-matrix-zeroes "${CMAKE_CURRENT_BINARY_DIR}/set-matrix-zeroes")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/can-place-flowers "${CMAKE_CURRENT_BINARY_DIR}/can-place-flowers")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/number-of-atoms "${CMAKE_CURRENT_BINARY_DIR}/number-of-atoms")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/decode-string "${CMAKE_CURRENT_BINARY_DIR}/decode-string")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/to-lower-case "${CMAKE_CURRENT_BINARY_DIR}/to-lower-case")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/remove-outermost-parentheses "${CMAKE_CURRENT_BINARY_DIR}/remove-outermost-parentheses")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/binary-watch "${CMAKE_CURRENT_BINARY_DIR}/binary-watch")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/letter-combinations-of-a-phone-number "${CMAKE_CURRENT_BINARY_DIR}/letter-combinations-of-a-phone-number")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/valid-parentheses "${CMAKE_CURRENT_BINARY_DIR}/valid-parentheses")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/top-k-frequent-elements "${CMAKE_CURRENT_BINARY_DIR}/top-k-frequent-elements")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/k-closest-points-to-origin "${CMAKE_CURRENT_BINARY_DIR}/k-closest-points-to-origin")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/kth-largest-element-in-an-array "${CMAKE_CURRENT_BINARY_DIR}/kth-largest-element-in-an-array")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/third-maximum-number "${CMAKE_CURRENT_BINARY_DIR}/third-maximum-number")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/sort-characters-by-frequency "${CMAKE_CURRENT_BINARY_DIR}/sort-characters-by-frequency")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/kth-largest-element-in-a-stream "${CMAKE_CURRENT_BINARY_DIR}/kth-largest-element-in-a-stream")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/maximum-length-of-pair-chain "${CMAKE_CURRENT_BINARY_DIR}/maximum-length-of-pair-chain")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/design-linked-list "${CMAKE_CURRENT_BINARY_DIR}/design-linked-list")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/merge-two-sorted-lists "${CMAKE_CURRENT_BINARY_DIR}/merge-two-sorted-lists")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/merge-sorted-array "${CMAKE_CURRENT_BINARY_DIR}/merge-sorted-array")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/squares-of-a-sorted-array "${CMAKE_CURRENT_BINARY_DIR}/squares-of-a-sorted-array")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/valid-sudoku "${CMAKE_CURRENT_BINARY_DIR}/valid-sudoku")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/merge-k-sorted-lists "${CMAKE_CURRENT_BINARY_DIR}/merge-k-sorted-lists")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/ugly-number-ii "${CMAKE_CURRENT_BINARY_DIR}/ugly-number-ii")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/merge-two-binary-trees "${CMAKE_CURRENT_BINARY_DIR}/merge-two-binary-trees")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/product-of-array-except-self "${CMAKE_CURRENT_BINARY_DIR}/product-of-array-except-self")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/binary-tree-inorder-traversal "${CMAKE_CURRENT_BINARY_DIR}/binary-tree-inorder-traversal")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/top-k-frequent-words "${CMAKE_CURRENT_BINARY_DIR}/top-k-frequent-words")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/keyboard-row "${CMAKE_CURRENT_BINARY_DIR}/keyboard-row")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/intersection-of-two-arrays-ii "${CMAKE_CURRENT_BINARY_DIR}/intersection-of-two-arrays-ii")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/backspace-string-compare "${CMAKE_CURRENT_BINARY_DIR}/backspace-string-compare")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/design-hashmap "${CMAKE_CURRENT_BINARY_DIR}/design-hashmap")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/design-hashset "${CMAKE_CURRENT_BINARY_DIR}/design-hashset")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/binary-number-with-alternating-bits "${CMAKE_CURRENT_BINARY_DIR}/binary-number-with-alternating-bits")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/plus-one "${CMAKE_CURRENT_BINARY_DIR}/plus-one")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/add-to-array-form-of-integer "${CMAKE_CURRENT_BINARY_DIR}/add-to-array-form-of-integer")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/find-median-from-data-stream "${CMAKE_CURRENT_BINARY_DIR}/find-median-from-data-stream")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/serialize-and-deserialize-binary-tree "${CMAKE_CURRENT_BINARY_DIR}/serialize-and-deserialize-binary-tree")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/swap-nodes-in-pairs "${CMAKE_CURRENT_BINARY_DIR}/swap-nodes-in-pairs")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/reverse-nodes-in-k-group "${CMAKE_CURRENT_BINARY_DIR}/reverse-nodes-in-k-group")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/count-of-smaller-numbers-after-self "${CMAKE_CURRENT_BINARY_DIR}/count-of-smaller-numbers-after-self")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/last-stone-weight "${CMAKE_CURRENT_BINARY_DIR}/last-stone-weight")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/ones-and-zeroes "${CMAKE_CURRENT_BINARY_DIR}/ones-and-zeroes")
